<resources>
    <string name="app_name">MyPetrol</string>
    <string name="are_you_new_user">Sunteți utilizator nou?</string>
    <string name="sign_up">ÎNSCRIE-TE</string>
    <string name="sign_in">CONECTAȚI-VĂ</string>
    <string name="idnp_login_juridic">IDNP</string>
    <string name="username_login_juridic">Nume de utilizator</string>
    <string name="password_login_form">Parolă</string>
    <string name="phone_number">Numărul de telefon</string>
    <string name="message_dialog_login">Bine ați venit la&#160;</string>
    <string name="card_de_combustibil">Card de combustibil</string>
    <string name="cabinet_personal">Cabinet personal</string>
    <string name="fizic_tab">P. Fizică</string>
    <string name="juridic_tab">P.Juridică</string>
    <string name="welcome_message_comapny">Bine ați venit la&#160;</string>
    <string name="title_add_card">Adaugă card&#160;</string>
    <string name="am_cabinet_personal">Aveți deja un cabinet personal?</string>
    <string name="urm_torul_pas_add_card">URMĂTORUL PAS</string>
    <string name="todo">TODO</string>
    <string name="numarul_cardului_add_card">Numărul cardului</string>
    <string name="verificare_cod_add_card">Confirmare PIN</string>
    <string name="pin_info_messages">Ți-a fost trimis un mesaj cu cod PIN pe telefon.\nIntroduceți-l mai jos pentru a continua.</string>
    <string name="info_card_detail_account">Acest card aparține clientului <b>%1$s.</b> cu numărul contractului:%2$s  valabil pe perioada: %3$s. \nAcest card, %4$s , poate fi folosit pentru alimentare la orice stație PECO al companiei <b> %5$s</b> conform condițiilor contractului. </string>
    <string name="despre_program">Despre aplicație</string>
    <string name="cabinet_petrol_aplicatie_info">" - verificați cu ușurință bilanțul conturilor Dvs. la diferite companii PECO. Modificați limitele, vizualizați istoria alimentărilor și consumul pe fiecare card aparte zilnic, săptămînal sau lunar."</string>
    <string name="reducere_la_produse_activity">Reducere la produse</string>
    <string name="limit_text">Limită</string>
    <string name="today_limit_time">Astăzi</string>
    <string name="week_limit_time">Săptămînă</string>
    <string name="month_limit_type">Lună</string>
    <string name="consum_limit_text">Consum</string>
    <string name="remain_limit_text">Rămas</string>
    <string name="hint_search_card_in_list">Căutare card</string>
    <string name="error_load_card_list">Lista de carduri nu a fost incărcată :(</string>
    <string name="modificare_parola_activity">Modificare parolă</string>
    <string name="change_password_hint_old_pass">Parola veche</string>
    <string name="change_password_new_pass">Parola nouă</string>
    <string name="change_pass_confirm_pass">Confirmă parola nouă</string>
    <string name="change_pass_button">Modifică</string>
    <string name="menu_company_1_cont">Conturi</string>
    <string name="menu_company_2_prices">Prețuri</string>
    <string name="menu_company_3_map">Hartă</string>
    <string name="account_menu_btn_cards">Carduri</string>
    <string name="account_menu_btn_products">Reducere produse</string>
    <string name="account_menu_btn_history">Istoria</string>
    <string name="account_menu_btn_suply">Suplinire</string>
    <string name="account_menu_btn_notify">Notificări</string>
    <string name="account_menu_btn_profil">Profil</string>
    <string name="history_activity_title">Istoria tranzacțiilor</string>
    <string name="history_list_empty">Lista este goală!</string>
    <string name="retry_text">Reîncearcă</string>
    <string name="history_list_not_loaded">Prețurile nu au fost încărcate!\n\nVerifică-ți conexiunea la internet!</string>
    <string name="oops_text">Oops!</string>
    <string name="detalii_history_activity">Detalii operațiune</string>
    <string name="alimentare_type_transaction">Alimentare</string>
    <string name="suplinire_type_transaction">Suplinire</string>
    <string name="descarc_chitanta_history_detail">Descarcă chitanța</string>
    <string name="trimite_chitanta_history_detail">Trimite chitanța</string>
    <string name="tip_achitare_transaction">Tip achitare</string>
    <string name="suma_transaction">Suma</string>
    <string name="cardul_number_transaction">Cardul</string>
    <string name="date_transaction">Data</string>
    <string name="number_transaction">Nr. tranzacției</string>
    <string name="produsul_transaction">Produsul</string>
    <string name="cantitatea_transaction">Cantitatea</string>
    <string name="locale_transaction">Stația PECO</string>
    <string name="info_activity_title">Informații</string>
    <string name="despre_card_activity_title">Despre card</string>
    <string name="juric_doc_facturate">Facturate</string>
    <string name="juric_doc_ne_facturate">Ne facturate</string>
    <string name="juric_doc_datorii">Întârziere</string>
    <string name="datorii_juridic">Datorii</string>
    <string name="main_menu_companii">Companii</string>
    <string name="main_menu_news">Noutăți</string>
    <string name="notify_activity_title">Notificări</string>
    <string name="suplinire_cont_notify">Suplinire cont</string>
    <string name="suply_notify_info">Notificări cu privire la ultimele supliniri</string>
    <string name="alimentare_cont_notify">Alimentare cont</string>
    <string name="alimentare_notify_info">Notificări cu privire la ultimele alimentari</string>
    <string name="news_notify">Noutăți</string>
    <string name="news_notify_info">Notificări despre ultimele noutăți</string>
    <string name="promo_notify">Promoții</string>
    <string name="promo_notify_info">Notificări despre ultimele promoții</string>
    <string name="notification_list_activity_title">Lista de notificări</string>
    <string name="general_settings_activity_title">Setări generale</string>
    <string name="lang_item_settings">Limba</string>
    <string name="feedback_item_settings">Scrie-ne</string>
    <string name="feedback_item_settings_info">Lasă un mesaj cu o recenzie!</string>
    <string name="despre_program_item_settings">"Despre "</string>
    <string name="informatii_cabinet_petrol_settings">"Informații despre "</string>
    <string name="despre_cont_profil">Despre cont</string>
    <string name="despre_cont_profil_info">Statut,informații cont</string>
    <string name="notify_profil">Notificări</string>
    <string name="notify_profil_info">Notificări de cont</string>
    <string name="pass_profil">Parolă</string>
    <string name="pass_profil_info">Modifică parola</string>
    <string name="exit_profil">Ieșire</string>
    <string name="exit_profil_info">Ieșire din contul curent</string>
    <string name="despre_card_profil">Despre card</string>
    <string name="despre_card_profil_info">Statut,informații card</string>
    <string name="meniu_card">MENIU</string>
    <string name="produse_card">Produse</string>
    <string name="suplinire_cont_card">Suplinire cont</string>
    <string name="change_limit_card">Modificați limitele</string>
    <string name="limita_pe_zi_edit_card">Limita pe zi</string>
    <string name="limita_pe_week_edit_card">Limita pe săptămînă</string>
    <string name="limita_pe_month_edit_card">Limita pe lună</string>
    <string name="empty_field_set_limit_0">* Pentru cîmpurile necompletate,se va atribui limita zero</string>
    <string name="salveaza_btn_edit_card">Salvează</string>
    <string name="recuperare_parola">Recuperare parolă</string>
    <string name="adresa_e_mail">Adresă e-mail</string>
    <string name="recuperare_pass">Recuperare</string>
    <string name="first_name_sign_up">Numele</string>
    <string name="last_name_sign_up">Prenumele</string>
    <string name="filtru_transaction">FILTRU</string>
    <string name="tipul_tranzaction_filter">Tipul tranzacțiilor</string>
    <string name="perioada_filter_transaction">Perioada</string>
    <string name="toate_type_filter">Toate</string>
    <string name="alimentare_type_filter">Alimentare</string>
    <string name="suplinire_type_filter">Suplinire</string>
    <string name="year_limit_time">2020</string>
    <string name="toat_perioada_filter">Toată perioada</string>
    <string name="sterge_toate_filtrele">Șterge toate filtrele</string>
    <string name="confirm_input_pin">Confirmă</string>
    <string name="pasul_precedent_add_card">Pasul precedent</string>
    <string name="verifica_card_data_login">Verifică</string>
    <string name="renunt_btn">Anulați</string>
    <string name="telefon_sau_e_mail">Telefon sau e-mail</string>
    <string name="nume_de_utilizator_telefon_sau_e_mail">Nume de utilizator, telefon sau e-mail</string>
    <string name="adaug_un_alt_cont_main">Adaugă un cont nou</string>
    <string name="forgot_password">Ați uitat parola?</string>
    <string name="limit_aditional">Limită adițională:</string>
    <string name="zi_limit">Zi</string>
    <string name="lei_text">" MDL"</string>
    <string name="litri_text">" L"</string>
    <string name="balance_card_inlist">"Balanța: "</string>
    <string name="disponibil_client_in_list">"Disponibil: "</string>
    <string name="accounts_added_in_company">"Conturi adaugate: "</string>
    <string name="type_notification_received_personal">Personale</string>
    <string name="type_notification_received_news">Noutăți</string>
    <string name="type_notification_received_promo">Promoții</string>
    <string name="type_notification_received_refueling">Suplinire</string>
    <string name="price_lei">" lei"</string>
    <string name="type_notification_received_filling">Alimentare</string>
    <string name="short_title_personal_notification">"Ceva pentru "</string>
    <string name="short_title_news_notification">"Noutate pentru "</string>
    <string name="short_title_newdiscount_notification">"Promoție pentru "</string>
    <string name="short_title_refilling_notification">"Alimentarea contlui "</string>
    <string name="short_title_filling_notification">"Suplinirea contului "</string>
    <string name="msg_supply_action_button">La moment aceasta optiune nu este disponibila.\nCurind va fi activată!</string>
    <string name="dialog_button_understand">Am înţeles</string>
    <string name="updates_limit_edit_card">Actualizarea limitelor...</string>
    <string name="dialog_msg_response_from_service_null">Răspunsul de la serviciu este gol!</string>
    <string name="dialog_failure_service">\"Operația a eșuat!\nEroare: \"</string>
    <string name="dialog_title_succes">Succes!</string>
    <string name="dialog_msg_send_new_password">Pe telefon sau pe email a fost trimisă parola nouă.</string>
    <string name="error_input_number_card">Introduceți numărul cardului!</string>
    <string name="error_input_email">Introduceți adresa e-mail!</string>
    <string name="error_input_first_name">Introduceți numele!</string>
    <string name="error_input_last_name">Introduceți prenumele!</string>
    <string name="error_input_idnp">Introduceți IDNP-ul!</string>
    <string name="error_input_number_phone">Introduceți numărul de telefon!</string>
    <string name="error_input_password">Introduceți parola!</string>
    <string name="progres_msg_register_user">Înregistrare utilizator...</string>
    <string name="progres_msg_activate_user">Activare utilizator...</string>
    <string name="progres_msg_authenticate">Autentificare...</string>
    <string name="progres_msg_get_info_client">Obținerea informației despre client...</string>
    <string name="dialog_button_retry">Reîncercați</string>
    <string name="progres_msg_confirm_pin">Confirmare pin...</string>
    <string name="progres_msg_get_info_card">Obținerea informației despre card...</string>
    <string name="progres_msg_authenticate_card">Autentificare card...</string>
    <string name="dialog_msg_this_card_exist">Acest card există deja!</string>
    <string name="dialog_btn_ok">OK</string>
    <string name="progres_msg_loading">Încărcare...</string>
</resources>