<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bottom_sheet"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/round_backgound_bottom_sheet"
    android:orientation="vertical"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

    <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/filtru_transaction"
        android:textColor="@android:color/black"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/divider5"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:background="#D1D1D1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView16" />

    <View
        android:id="@+id/divider11"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="#D1D1D1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chipGroup" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/tipul_tranzaction_filter"
        android:textColor="@android:color/black"
        android:textSize="18dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider5" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chipGroup2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:checkedChip="@id/chip9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView12"
        app:selectionRequired="true"
        app:singleSelection="true">

        <com.google.android.material.chip.Chip
            android:id="@+id/chip9"
            style="@style/Widget.App.Chip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/toate_type_filter"
            android:textSize="18dp"
            app:checkedIconVisible="false"
            app:chipEndPadding="10dp"
            app:closeIconVisible="false" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip10"
            style="@style/Widget.App.Chip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alimentare_type_filter"
            android:textSize="18dp"
            app:checkedIconVisible="false"
            app:closeIconVisible="false" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip11"
            style="@style/Widget.App.Chip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/suplinire_type_filter"
            android:textSize="18dp"
            app:checkedIconVisible="false"
            app:closeIconVisible="false" />


    </com.google.android.material.chip.ChipGroup>

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chipGroup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        app:checkedChip="@id/chip2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView29"
        app:selectionRequired="true"
        app:singleSelection="true">

        <com.google.android.material.chip.Chip
            android:id="@+id/chip5"
            style="@style/Widget.App.Chip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/today_limit_time"
            android:textSize="18dp"
            app:checkedIconVisible="false"
            app:chipEndPadding="10dp"
            app:closeIconVisible="false" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip6"
            style="@style/Widget.App.Chip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/week_limit_time"
            android:textSize="18dp"
            app:checkedIconVisible="false"
            app:closeIconVisible="false" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip7"
            style="@style/Widget.App.Chip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/month_limit_type"
            android:textSize="18dp"
            app:checkedIconVisible="false"
            app:closeIconVisible="false" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip8"
            style="@style/Widget.App.Chip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/year_limit_time"
            android:textSize="18dp"
            app:checkedIconVisible="false"
            app:closeIconVisible="false" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chip2"
            style="@style/Widget.App.Chip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/toat_perioada_filter"
            android:textSize="18dp"
            app:checkedIconVisible="false"
            app:closeIconVisible="false" />


    </com.google.android.material.chip.ChipGroup>

    <TextView
        android:id="@+id/textView29"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/perioada_filter_transaction"
        android:textColor="@android:color/black"
        android:textSize="18dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chipGroup2" />

    <TextView
        android:id="@+id/text_delete_all_filters"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="32dp"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/sterge_toate_filtrele"
        android:textColor="@color/green"
        android:textSize="18dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider11"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>